--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["MocaCDeveloper <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 colorama = "^0.4.4"
+art = "^5.2"
 
 [tool.poetry.dev-dependencies]
 
